<resources>
    <string name="app_name">Models_2</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_routeList">RouteList</string>

    <!-- DEMO MAP ACTIVITY -->
    <string name="default_text_percentTextView"> 0% </string>
    <string name="default_text_distanceTextView"> 0 m</string>
    <string name="default_text_stepsTextView"> 0 steps</string>

    <!-- List Activity components -->
    <string name="icon_list_description">Arrow to the right, it\'s a design component</string>

    <!-- Map Activity components -->
    <string name="back_button">Back to the list</string>
    <string name="textPercent_when_route_complete">100%</string>
    <string name="hint_for_edit_text">Steps</string>
    <string name="update_button_text">Update</string>
    <string name="text_increase_step_amount_button">+</string>
    <string name="text_decrease_step_amount_button">-</string>
</resources>
